<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_large"
    >

    <TextView
        android:id="@+id/targetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/startClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/target"
        android:text="@string/target"
        android:textSize="@dimen/text_label"
        android:textStyle="bold"
        android:labelFor="@+id/target"
        />

    <EditText
        android:id="@+id/target"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/targetLabel"
        app:layout_constraintStart_toEndOf="@+id/targetLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:inputType="textUri"
        android:text="@string/defaultUrl"
        android:minHeight="48dp"
        android:autofillHints=""
        />

    <Button
        android:id="@+id/startClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/targetLabel"
        app:layout_constraintBottom_toTopOf="@+id/clientState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stopClient"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/start"
        />

    <Button
        android:id="@+id/stopClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/startClient"
        app:layout_constraintStart_toEndOf="@+id/startClient"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/stop"
        />

    <TextView
        android:id="@+id/clientState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/startClient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/stopped"
        android:textSize="@dimen/text_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>