<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_large"
    >

    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tlsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/port"
        android:text="@string/port"
        android:textSize="@dimen/text_label"
        android:textStyle="bold"
        android:labelFor="@+id/port"
        />

    <EditText
        android:id="@+id/port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/portLabel"
        app:layout_constraintStart_toEndOf="@+id/portLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_small"
        android:inputType="numberDecimal"
        android:text="@string/defaultPort"
        android:minHeight="48dp"
        android:autofillHints=""
        android:textColorHint="#757575"
        />

    <TextView
        android:id="@+id/tlsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/portLabel"
        app:layout_constraintBottom_toTopOf="@+id/startServer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tls"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/tls"
        android:textSize="@dimen/text_label"
        android:textStyle="bold"
        android:labelFor="@+id/tls"
        />

    <CheckBox
        android:id="@+id/tls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tlsLabel"
        app:layout_constraintStart_toEndOf="@+id/tlsLabel"
        android:layout_marginStart="@dimen/margin_small"
        android:checked="true"
        />

    <Button
        android:id="@+id/startServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tlsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stopServer"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/start"
        />

    <Button
        android:id="@+id/stopServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/startServer"
        app:layout_constraintStart_toEndOf="@+id/startServer"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/stop"
        />

    <TextView
        android:id="@+id/serverState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/startServer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/stopped"
        android:textSize="@dimen/text_label"
        />

</androidx.constraintlayout.widget.ConstraintLayout>